--- a/score.yaml
+++ b/score.yaml
@@ -14,6 +14,7 @@ containers:
     image: # Set by pipeline
     variables:
       Hello: World
+      Ephemeral: "true"
 
 resources:
   dns: # We need a DNS record to point to the service 
